# redis-python-telegram-bot

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
telegram_bot/: __init__.py  config.py  logging.py  main.py  redis_store.py
telegram_bot/routes/: __init__.py  exception_handlers.py  telegram_webhook.py
telegram_bot/telegram_app/: __init__.py  custom_context.py  custom_conversation_handler.py
telegram_bot/telegram_app/handlers/: __init__.py  get_age.py  get_name.py  start.py  types.py
